# app/Models/Store.php
@@ -4,8 +4,50 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ * @SWG\Definition(required={"id", "name", "street", "street_number", "phone_number", "post_code", "city", "country", "latitude", "longitude"})
+ */
 class Store extends Model{
 
+    /**
+     * @SWG\Property(property="id", type="integer", format="int64")
+     */
+
+    /**
+     * @SWG\Property(property="name", type="string")
+     */
+
+    /**
+     * @SWG\Property(property="street", type="string")
+     */
+
+    /**
+     * @SWG\Property(property="street_number", type="string")
+     */
+
+    /**
+     * @SWG\Property(property="phone_number", type="string")
+     */
+
+    /**
+     * @SWG\Property(property="post_code", type="string")
+     */
+
+    /**
+     * @SWG\Property(property="city", type="string")
+     */
+
+    /**
+     * @SWG\Property(property="country", type="string")
+     */
+
+    /**
+     * @SWG\Property(property="latitude", type="string")
+     */
+
+    /**
+     * @SWG\Property(property="longitude", type="string")
+     */
     protected $table = "stores";
     /**
      * The attributes that are mass assignable.
